--- a/default.html
+++ b/default.html
@@ -2,8 +2,8 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Bergen Pohl</title>
-		<meta name="author" content="Bergen Pohl">
+		<title></title>
+		<meta name="author" content="">
 		<meta name="description" content="">
 		<meta name="keywords" content="">
 		<meta name="theme-color" content="#000000">
