--- a/default.html
+++ b/default.html
@@ -6,7 +6,7 @@
 		<meta name="author" content="">
 		<meta name="description" content="">
 		<meta name="keywords" content="">
-		<meta name="theme-color" content="#000000">
+		<meta name="theme-color" content="#ffffff">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
 		<base href="" target="_blank">
